--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ShubhamGet.github.io/livewebsitebyreact",
+  "homepage": "https://username.github.io/",
   "name": "project",
   "version": "0.1.0",
   "private": true,
